--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-API_DOMAIN = project-2-api.herokuapp.com
-API_KEY = 3ab67408-e6b5-49e1-b43f-a0c0cc6a7703
+API_KEY = '3ab67408-e6b5-49e1-b43f-a0c0cc6a7703'
