--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "Back end + API for Brainflix project",
   "main": "index.js",
+  "nodemonConfig": {
+    "ext": "js",
+    "ignore": [
+      "*.test.ts",
+      "db/*"
+    ],
+    "delay": "2"
+  },
   "scripts": {
     "server": "nodemon index.js"
   },
@@ -11,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
